--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ Author URL: http://w3layouts.com
     <header id="site-header" class="fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light stroke py-lg-0">
-                <h1><a class="navbar-brand pe-xl-5 pe-lg-4" href="index.html">
-                        <span class="w3yellow">Work</span>Core
-                    </a></h1>
+                <img src="assets/images/logo/devfirelogo-light.png" style="width:150px;height:42px;" alt="Devfire Logo"> <a class="navbar-brand pe-xl-5 pe-lg-4" href="index.html">
+                        
+                </a></img>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
                     <span class="navbar-toggler-icon fa icon-close fa-times"></span>
@@ -500,9 +500,7 @@ Author URL: http://w3layouts.com
                         </div>
                     </div>
                 </div>
-                <div class="bottom-copies text-center">
-                    <p class="copy-footer-29">© 2021 WorkCore. All rights reserved | Designed by <a href="https://w3layouts.com">W3layouts</a></p>
-                </div>
+        
             </div>
         </div>
 
